<resources>
    <string name="app_name">user</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Username</string>
    <string name="password">Password</string>
    <string name="simulated_map">Simulated Map</string>
    <string name="traffic_light">Traffic Light</string>
    <string name="automobile_console">Automobile Console</string>
    <string name="user">User</string>
    <string name="enter_current_traffic_light">Enter current traffic light</string>
    <string name="admin">Admin</string>
    <string name="userOption">User</string>
    <string name="user_type">User type:</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="username">Username</string>
    <string name="app_name">IntelligentTransportation</string>
    <string name="go_back">Back</string>
    <string name="information_o">car name:Porsche,model:918,color:Orange</string>
    <string name="information_w">car name:Buggati,model:Chiron,color:White</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="intelligent">Intelligent</string>
    <string name="transportation">Transportation</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_traffic_light">Enter traffic light</string>
    <string name="automobile_console">Automobile console</string>
    <string name="user">User</string>
    <string name="traffic_light">Traffic Light</string>
    <string name="todo">TODO</string>
    <string name="ic_traffic_light">&#xe6ec;</string>
    <string name="ic_car_console">&#xe656;</string>
    <string name="ic_user">&#xe660;</string>
    <string name="title_traffic_light">Traffic</string>
    <string name="title_car_console">Car</string>
    <string name="title_user">User</string>
    <string name="traffic_control">Traffic Control</string>
    <string name="pedestrian_wait">Pedestrian Wait</string>
    <string name="go">Go</string>
    <string name="re">Re</string>
    <string name="exch">Exch</string>
</resources>